# artifacts/api-server/src/routes/index.ts
@@ -8,10 +8,12 @@ import copyTradingRouter from "./copyTrading";
 import eaStrategiesRouter from "./eaStrategies";
 import transactionsRouter from "./transactions";
 import adminRouter from "./admin";
+import superAdminRouter from "./superAdmin";
 import plansRouter from "./plans";
 import kycRouter from "./kyc";
 import referralRouter from "./referral";
 import mt5Router from "./mt5";
+import mt5RelayRouter from "./mt5Relay";
 import ticketsRouter from "./tickets";
 import notificationsRouter from "./notifications";
 import walletRouter from "./wallet";
@@ -30,10 +32,12 @@ router.use("/copy-traders", copyTradingRouter);
 router.use("/ea-strategies", eaStrategiesRouter);
 router.use("/transactions", transactionsRouter);
 router.use("/admin", adminRouter);
+router.use("/super-admin", superAdminRouter);
 router.use("/plans", plansRouter);
 router.use("/kyc", kycRouter);
 router.use("/referral", referralRouter);
 router.use("/mt5-accounts", mt5Router);
+router.use("/mt5-relay", mt5RelayRouter);
 router.use("/tickets", ticketsRouter);
 router.use("/notifications", notificationsRouter);
 router.use("/wallet", walletRouter);
